[package]
name = "ankaios_sdk"
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
description = "Eclipse Ankaios Rust SDK - provides a convenient Rust interface for interacting with the Ankaios platform."
documentation = "https://docs.rs/ankaios-sdk/0.7.0"
repository = "https://github.com/eclipse-ankaios/ank-sdk-rust"
readme = "README.md"
keywords = ["ankaios", "automotive", "sdk", "container", "orchestration"]
categories = ["automotive", "virtualization", "api-bindings"]  # https://crates.io/category_slugs
exclude = ["/tests", "/.github"]

[lib]
name = "ankaios_sdk"
crate-type = ["lib"]

[dependencies]
ankaios_api = { git = "https://github.com/eclipse-ankaios/ankaios.git", branch = "main", package = "ankaios-api" }  # TODO pinpoint to a proper tag when available
prost = "0.14"
log = "0.4"
serde_yaml = "0.9"
thiserror = "2.0"
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1.41", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.4"
nix = { version = "0.30", features = ["fs"] }
mockall = "0.11"
mockall_double = "0.3"

[features]
default = []
test_utils = []
