[package]
name = "ankaios_sdk"
version = "0.8.0-pre"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
description = "Eclipse Ankaios Rust SDK - provides a convenient Rust interface for interacting with the Ankaios platform."
documentation = "https://docs.rs/ankaios-sdk/0.7.0"
repository = "https://github.com/eclipse-ankaios/ank-sdk-rust"
readme = "README.md"
keywords = ["ankaios", "automotive", "sdk", "container", "orchestration"]
categories = ["automotive", "virtualization", "api-bindings"]  # https://crates.io/category_slugs
exclude = ["/tests", "/.github"]

[lib]
name = "ankaios_sdk"
crate-type = ["lib"]

[dependencies]
prost = "0.14"
tonic = "0.14"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
uuid = { version = "1.7.0", features = ["v4"] }
async-trait = "0.1"
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
] }
# home version is pinpointed because this is the only one
# that works with the current version of rust (from the devcontainer)
home = "=0.5.9"

[dev-dependencies]
tempfile = "3.4"
nix = { version = "0.29", features = ["fs", "user"] }
mockall = "0.14"
mockall_double = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
default = []
test_utils = []
